# wassup

./: CMakeLists.txt  mainwindow.cpp
assets/: com.soufrabi.wassup.desktop
src/: mainwindow.cpp  mainwindow.ui  notificationpopup.cpp  notificationpopup.h
